--- a/style.css
+++ b/style.css
@@ -190,6 +190,30 @@ form h2{
 /*fin du formulaire d'inscription*/
 
 /*debut style pour la timeline*/
+#div_spoiler{
+  text-align: center;
+}
+
+#button_spoiler{
+  margin-top: 10px;
+  background-color: #f8f8f8;
+  color: #1e1f22;
+  font-size: 15px;
+  border: SOLID;
+  border-color: black;
+  padding: 10px 20px;
+  border-radius: 5px;
+  outline: none;
+  cursor: pointer;
+  transition: transform 0.5s;
+
+}
+
+#button_spoiler:hover{
+  transform: scale(1.05);
+}
+
+
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");
 * {
   margin: 0;
@@ -246,6 +270,30 @@ html {
   margin-bottom: 10px;
   letter-spacing: 2px;
 }
+
+ul .différence_book_and_movie_spoiler p{
+  color: #1e1f22;
+}
+
+ul .missing_from_movie_spoiler p{
+  color: #1e1f22;
+}
+
+ul .missing_from_book_spoiler p{
+  color: #1e1f22;
+}
+
+  
+#timeline.spoiler ul .missing_from_movie_spoiler p{
+  color: white;
+}
+#timeline.spoiler ul .différence_book_and_movie_spoiler p{
+  color: white;
+}
+#timeline.spoiler ul .missing_from_book_spoiler p{
+  color: white;
+}
+
 @media only screen and (min-width: 768px) {
   .timeline:before {
     content: "";
@@ -300,7 +348,7 @@ html {
     background-color: rgba(236, 225, 225, 0.951);
   }
 }
-/*fin de la tiemline*/
+/*fin de la timeline*/
 
 /*formulaire de contact*/
 .contact_form {
@@ -378,7 +426,7 @@ form h1{
   height: 72%;
 }
 
-.foot_form_contact button{
+.foot_form_contact input{
   margin-top: 10px;
   background-color: #f8f8f8;
   color: #1e1f22;
@@ -391,7 +439,7 @@ form h1{
   transition: transform 0.5s;
 }
 
-.foot_form_contact button:hover{
+.foot_form_contact input:hover{
   transform: scale(1.05);
 }
 
@@ -542,11 +590,7 @@ margin-bottom: 30px;
 }
 }
 
-/*page mon compte*/
-.my_compte_title{
-  text-align: center;
-  color: white;
-}
+
 
 /*formulaire d'ajout d'oeuvre*/
 #titre_ajout_oeuvre{
@@ -580,7 +624,210 @@ margin-bottom: 30px;
   margin-top: 50px;
 }
 
+#timeline_content select {
+  margin-top: 10px;
+  
+}
+
+#timeline_content label {
+  width: 240px;
+  display: inline-block;
+  text-align: right;
+}
+
+#timeline_content textarea {
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #f8f8f8;
+  border: 2px solid black;
+  outline: none;
+  border-radius: 5px;
+  resize: none;
+  height: 72%;
+  
+}
+
+@media screen and (max-width:920px) {
+  #titre_ajout_oeuvre{
+    color: white;
+    margin-left: 25%;
+  }
+  
+  
+  .ajout-oeuvre {
+    color: white;
+    margin-top: 10px;
+    
+  }
+  .ajout-oeuvre label{
+    width: 240px;
+    display: inline-block;
+    text-align: right;
+    
+    
+  }
+  
+  .ajout-oeuvre input{
+    margin-top: 10px;
+    margin-left: 25%;
+    
+    
+  }
+  
+  .ajout-oeuvre .split{
+    margin-top: 10px;
+  }
+  
+  
+  #container{
+    margin-top: 50px;
+  }
+  
+  #timeline_content select {
+    margin-top: 10px;
+    
+  }
+  
+  #timeline_content label {
+    width: 240px;
+    display: inline-block;
+    text-align: right;
+  }
+  
+  #timeline_content textarea {
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #f8f8f8;
+    border: 2px solid black;
+    outline: none;
+    border-radius: 5px;
+    resize: none;
+    height: 72%;
+    margin-left: 25%;
+    
+  }
+}
+/*fin du formulaire d'jout d'oeuvre*/
+/*footer*/
+main{
+  min-height: 100vh;
+   position:relative;
+   padding-bottom:100px;
+}
+
+footer {
+  background-color:  rgb(31, 29, 29);
+  width:100%;
+  height:40px;
+  text-align: center;
+ 
+
+}
+
+footer a {
+  color: white;
+  margin-top: 10px;
+  margin-left: 10px;
+   
+}
+
+/*page mon compte*/
+
+.my_compte_title{
+  text-align: center;
+  color: white;
+}
+
+.admin_table {
+  
+  border: solid;
+  border-color: black;
+  color: black;
+  background-color: rgb(191, 181, 181);
+  text-align: center;
+  margin: auto;
+  margin-top: 30px;
+ 
+}
+
+.admin_table td {
+  color: black;
+  border: solid;
+  text-align: center;
+}
+
+.div_user_compte{
+ margin-left: 38%;
+ margin-top: 10%;
+}
 
 
+.div_user_compte a:hover{
+color: black;
 
+}
+.user_compte{
+  margin-top: 10px;
+  background-color: #f8f8f8;
+  color: #1e1f22;
+  font-size: 15px;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  outline: none;
+  cursor: pointer;
+  transition: transform 0.5s;
+  margin-right: 10px;
+}
 
+.user_compte:hover{
+  transform: scale(1.05);
+}
+
+/*changement de mot de passe*/
+.registration_form .validation_form_password input{
+  margin-top: 10px;
+  background-color:  rgb(55, 52, 56);
+  color: white;
+  font-size: 20px;
+  border: solid;
+  border-color: white; 
+  border-radius: 20px;
+  outline: none;
+  cursor: pointer;
+  transition: transform 0.5s;
+  margin-left: 30%;
+  margin-top: 20px;
+  
+}
+
+.registration_form .validation_form_password input:hover{
+  transform: scale(1.05);
+  background-color:  white;
+  color: black;
+}
+
+@media screen and (max-width:920px) {
+
+  .registration_form .validation_form_password input{
+    margin-top: 10px;
+    background-color:  rgb(55, 52, 56);
+    color: white;
+    font-size: 20px;
+    border: solid;
+    border-color: white; 
+    border-radius: 20px;
+    outline: none;
+    cursor: pointer;
+    transition: transform 0.5s;
+    margin-left: 5%;
+    margin-top: 20px;
+    
+  }
+  
+  .registration_form .validation_form_password input:hover{
+    transform: scale(1.05);
+    background-color:  white;
+    color: black;
+  }
+}
